--- a/css/style.css
+++ b/css/style.css
@@ -1,306 +1,466 @@
-*,
-*::after,
-*::before {
-    box-sizing: border-box;
+@font-face {
+	font-family: 'codropsicons';
+	font-weight: normal;
+	font-style: normal;
+	src: url('../fonts/codropsicons/codropsicons.eot');
+	src: url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/codropsicons/codropsicons.woff') format('woff'),
+	url('../fonts/codropsicons/codropsicons.ttf') format('truetype'),
+	url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
 }
 
-:root {
-    font-size: 15px;
+*,
+*:after,
+*:before {
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    --color-text: #fff;
-    --color-bg: #111;
-    --color-link: #fff;
-    --color-link-hover: #fff;
-    color: var(--color-text);
-    background-color: var(--color-bg);
-    font-family: navigo, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    overflow: hidden;
-    background-image: linear-gradient(rgba(120,120,120,0.2),rgba(120,120,120,0.2)), url(../img/bg.jpg);
-    background-size: cover;
-}
-
-.demo-2 {
-    background-image: linear-gradient(rgba(120,120,120,0.2),rgba(120,120,120,0.2)), url(../img/bg2.jpg);
-}
-
-.demo-3 {
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(../img/bg3.jpg);
-}
-
-.demo-4 {
-    background-image: linear-gradient(rgba(120,120,120,0.2),rgba(120,120,120,0.2)), url(../img/bg7.jpg);
-}
-
-.demo-5 {
-    background-image: linear-gradient(rgba(120,120,120,0.2),rgba(120,120,120,0.2)), url(../img/bg5.jpg);
-}
-
-/* Page Loader */
-.js .loading::before,
-.js .loading::after {
-    content: '';
-    position: fixed;
-    z-index: 1000;
-}
-
-.js .loading::before {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--color-bg);
-}
-
-.js .loading::after {
-    top: 50%;
-    left: 50%;
-    width: 60px;
-    height: 60px;
-    margin: -30px 0 0 -30px;
-    border-radius: 50%;
-    opacity: 0.4;
-    background: var(--color-link);
-    animation: loaderAnim 0.7s linear infinite alternate forwards;
-
-}
-
-@keyframes loaderAnim {
-    to {
-        opacity: 1;
-        transform: scale3d(0.5,0.5,1);
-    }
+	font-family: 'Avenir Next', 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
+	color: #fff;
+	background: #333 url(../media/woods.jpg) no-repeat center center;
+	background-size: cover;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 a {
-    text-decoration: none;
-    color: var(--color-link);
-    outline: none;
-    opacity: 0.7;
+	text-decoration: none;
+	color: #d9ecc9;
+	outline: none;
 }
 
 a:hover,
 a:focus {
-    color: var(--color-link-hover);
-    outline: none;
-    text-decoration: underline;
-    opacity: 1;
+	color: #fff;
 }
 
-.frame {
-    padding: 3rem 5vw;
-    text-align: center;
-    z-index: 1000;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
+/* Container */
+.container {
+	width: 100vw;
+	height: 100vh;
+	border: 20px solid #fff;
+	position: relative;
+	display: -webkit-flex;
+	display: flex;
+	overflow: hidden;
+	-webkit-flex-direction: column;
+	flex-direction: column;
+	-webkit-justify-content: space-around;
+	justify-content: space-around;
+	-webkit-align-items: center;
+	align-items: center;
 }
 
-.frame__title {
-    font-size: 1rem;
-    margin: 0 0 1rem;
-    font-weight: normal;
+/* Top Navigation Style */
+.codrops-links {
+	position: relative;
+	display: inline-block;
+	text-align: center;
+	white-space: nowrap;
 }
 
-.frame__links {
-    display: inline;
+.codrops-links::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 2px;
+	height: 100%;
+	margin-left: -1px;
+	background: #ddd;
+	-webkit-transform: rotate3d(0,0,1,22.5deg);
+	transform: rotate3d(0,0,1,22.5deg);
 }
 
-.frame__links a:not(:last-child),
-.frame__demos a:not(:last-child) {
-    margin-right: 1rem;
+.codrops-icon {
+	display: inline-block;
+	width: 1.5em;
+	margin: 0.5em;
+	padding: 0em 0;
+	text-decoration: none;
 }
 
-.frame__demos {
-    margin: 1rem 0;
+.codrops-icon span {
+	display: none;
 }
 
-.frame__demos-text {
-    margin-right: 2rem;
+.codrops-icon:before {
+	font-family: 'codropsicons';
+	font-weight: normal;
+	font-style: normal;
+	font-variant: normal;
+	line-height: 1;
+	margin: 0 5px;
+	text-transform: none;
+	-webkit-font-smoothing: antialiased;
+	speak: none;
 }
 
-.frame__demo--current,
-.frame__demo--current:hover {
-    color: var(--color-text);
-    opacity: 0.5;
-    text-decoration: underline;
+.codrops-icon--drop:before {
+	content: '\e001';
 }
 
-.frame__button {
-    background: none;
-    border: 0;
-    margin: 0;
-    padding: 0;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    fill: #fff;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+.codrops-icon--prev:before {
+	content: '\e004';
 }
 
-.frame__button:focus {
-    outline: none;
-    opacity: 0.9;
+/* Image stack */
+.deco-stack {
+	width: 100%;
+	margin: 1em 0;
+	text-align: center;
+	white-space: nowrap;
 }
 
-.frame__content {
-    text-align: center;
+.deco-stack__img {
+	min-width: 200px;
+	max-width: 50%;
+	min-height: 200px;
+	max-height: 100%;
+	margin: 0 -60px;
+	border: 10px solid #fff;
+	outline: 1px solid transparent; /* For FF */
+	box-shadow: 0 0 10px rgba(0,0,0,0.3);
+	background: #aaa;
 }
 
-.frame__content-title {
-    margin: 0;
-    padding-bottom: 1rem;
-    line-height: 1;
-    font-size: 8vw;
-    font-weight: 300;
-    font-family: ivypresto-headline, serif;
-    color: #fff;
-    position: relative;
-    text-shadow: 0 1px 6px rgba(0,0,0,0.1);
+.deco-stack__img--rotation-1 {
+	-webkit-transform: rotate3d(0,0,1,-8deg);
+	transform: rotate3d(0,0,1,-8deg);
 }
 
-.frame__content-title::after {
-    content: '';
-    position: absolute;
-    width: 20%;
-    height: 1px;
-    background: #fff;
-    left: 40%;
-    top: 100%;
+.deco-stack__img--rotation-2 {
+	-webkit-transform: rotate3d(0,0,1,-1deg);
+	transform: rotate3d(0,0,1,-1deg);
 }
 
-.frame__content-text {
-    max-width: 600px;
-    font-size: 1rem;
-    margin: 2rem auto 3rem;
+.deco-stack__img--rotation-3 {
+	-webkit-transform: rotate3d(0,0,1,9deg);
+	transform: rotate3d(0,0,1,9deg);
 }
 
-.frame__switch-item {
-    cursor: pointer;
-    padding: 0.85rem 1.25rem;
-    border: 1px solid #fff;
-    font-family: ivypresto-headline, serif;
-    font-weight: 300;
-    font-size: 1.85rem;
-    margin: 0 1rem;
-    transition: opacity 0.3s;
-    display: inline-block;
-    margin-bottom: 1rem;
+.video-wrap {
+	position: fixed;
+	z-index: 1000;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-align-items: center;
+	align-items: center;
 }
 
-.frame__switch-item--current,
-.frame__switch-item:hover,
-.frame__switch-item:focus {
-    text-decoration: none;
+.video-wrap--show {
+	pointer-events: auto;
 }
 
-.frame__switch-item--current {
-    pointer-events: none;
-    opacity: 1;
+.video-inner {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	margin: 0 auto;
+	opacity: 0;
+	background: black;
 }
 
-.frame__content-text,
-.frame__switch {
-    opacity: 0;
-    transition: opacity 0.3s;
+.video-wrap--show .video-inner {
+	opacity: 1;
 }
 
-.video-started .frame__content-text,
-.video-started .frame__switch {
-    opacity: 1;
+.video-player {
+	position: absolute;
+	top: 50%;
+	width: 100%;
+	-webkit-transform: translate3d(0,-50%,0);
+	transform: translate3d(0,-50%,0);
 }
 
-.video {
-    pointer-events: none;
+/* Content */
+.content {
+	position: relative;
 }
 
-#canvas {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+/* Loader */
+.loader {
+	font-size: 2.5em;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate3d(-50%,-50%,0);
+	transform: translate3d(-50%,-50%,0);
 }
 
-.wrapper {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    pointer-events: none;
+.video-loaded .loader {
+	opacity: 0;
+	pointer-events: none;
+	-webkit-transition: opacity 0.3s;
+	transition: opacity 0.3s;
 }
 
-.plane {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-    z-index: 100;
+/* Button */
+.action {
+	font-family: 'Avenir Next', 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
+	font-size: 1.15em;
+	font-weight: bold;
+	position: relative;
+	overflow: hidden;
+	margin: 0;
+	padding: 1em 2em;
+	color: #fff;
+	border: 2px solid;
+	border-radius: 40px;
+	background: none;
+	-webkit-flex: none;
+	flex: none;
 }
 
-.plane video {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100px;
-    display: none;
+.action:focus {
+	outline: none;
 }
 
-@media screen and (min-width: 53em) {
-    .frame {
-        text-align: left;
-        display: grid;
-        padding: 3rem;
-        pointer-events: none;
-        grid-template-columns: 25% 50% 25%;
-        grid-template-areas: 'title links links'
-                            '... play ...'
-                            'content content content'
-                            '... demos demos';
-    }
-    .frame__title {
-        margin: 0;
-        grid-area: title;
-    }
-    .frame__button {
-        grid-area: play;
-        align-self: end;
-        justify-self: center;
-    }
-    .frame__content {
-        grid-area: content;
-        align-self: end;
-        justify-self: center;
-    }
-    .frame__tagline {
-        position: relative;
-        margin: 0 0 0 1rem;
-        padding: 0 0 0 1rem;
-        opacity: 0.5;
-    }
-    .frame__demos {
-        margin: 0;
-        grid-area: demos;
-        justify-self: end;
-        align-self: end;
-    }
-    .frame__links {
-        grid-area: links;
-        padding: 0;
-        justify-self: end;
-    }
-    .frame a,
-    .frame button {
-        pointer-events: auto;
-    }
+.action__label {
+	display: inline-block;
+	margin: 0 0 0 0.75em;
+}
+
+.action__label--hidden {
+	position: absolute;
+	top: 200%;
+}
+
+.action--play {
+	display: block;
+	margin: 1em auto;
+	opacity: 0;
+	pointer-events: none;
+	-webkit-transition: opacity 0.3s 0.1s;
+	transition: opacity 0.3s 0.1s;
+}
+
+.video-loaded .action--play {
+	opacity: 1;
+	pointer-events: auto;
+}
+
+.action--close {
+	line-height: 1;
+	position: absolute;
+	z-index: 1000;
+	top: 30px;
+	right: 30px;
+	width: 60px;
+	height: 60px;
+	padding: 0;
+	opacity: 0;
+	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+	transition: transform 0.3s, opacity 0.3s;
+	-webkit-transform: scale3d(0.7,0.7,1);
+	transform: scale3d(0.7,0.7,1);
+}
+
+.video-wrap--show .action--close {
+	opacity: 1;
+	-webkit-transition-delay: 1.2s;
+	transition-delay: 1.2s;
+	-webkit-transform: scale3d(1,1,1);
+	transform: scale3d(1,1,1);
+}
+
+@media screen and (min-width: 25em) {
+	.deco-stack__img {
+		width: 20vw;
+		height: 20vw;
+	}
+	.video-inner {
+		width: 30vw;
+		height: 30vw;
+		border: 20px solid #fff;
+		-webkit-transform: scale3d(0.1,0.1,1) rotate3d(0,0,1,-5deg);
+		transform: scale3d(0.1,0.1,1) rotate3d(0,0,1,-5deg);
+	}
+	.video-wrap--show .video-inner {
+		opacity: 0;
+		-webkit-animation: showVideo-1 1.25s forwards;
+		animation: showVideo-1 1.25s forwards;
+	}
+	.video-wrap--hide .video-inner {
+		-webkit-animation: hideVideo 1.25s forwards;
+		animation: hideVideo 1.25s forwards;
+	}
+	.video-player {
+		left: 50%;
+		width: auto;
+		height: 100vh;
+		-webkit-transition: -webkit-transform 1s;
+		transition: transform 1s;
+		-webkit-transform: translate3d(-50%,-50%,0) scale3d(0.7,0.7,1) rotate3d(0,0,1,5deg);
+		transform: translate3d(-50%,-50%,0) scale3d(0.7,0.7,1) rotate3d(0,0,1,5deg);
+	}
+	.video-wrap--show .video-player,
+	.video-wrap--hide .video-player {
+		-webkit-transform: translate3d(-50%,-50%,0) scale3d(1,1,1);
+		transform: translate3d(-50%,-50%,0) scale3d(1,1,1);
+	}
+}
+
+/* This is the same as an aspect ratio of 16/9.
+Here we take the viewport height as main measure
+and size the video-inner accordingly.
+The video itself will use the viewport width as main 
+measure so that we ensure a filling of the screen.
+*/
+@media screen and (min-width: 25em) and (min-aspect-ratio: 1280/720) {
+	.deco-stack__img {
+		width: 20vh;
+		height: 20vh;
+	}
+	.video-inner {
+		width: 30vh;
+		height: 30vh;
+	}
+	.video-wrap--show .video-inner {
+		-webkit-animation: showVideo-2 1.25s forwards;
+		animation: showVideo-2 1.25s forwards;
+	}
+	.video-player {
+		width: 100vw;
+		height: auto;
+	}	
+}
+
+/* Animation for showing the video wrapper */
+@-webkit-keyframes showVideo-1 {
+	50% {
+		width: 50vw;
+		height: 50vw;
+		opacity: 1;
+		-webkit-transform: scale3d(0.5,0.5,1) rotate3d(0,0,1,-5deg);
+		transform: scale3d(0.5,0.5,1) rotate3d(0,0,1,-5deg);
+	}
+	100% {
+		width: 100vw;
+		height: 100vh;
+		opacity: 1;
+		-webkit-transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+		transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+	}
+}
+
+@keyframes showVideo-1 {
+	50% {
+		width: 50vw;
+		height: 50vw;
+		opacity: 1;
+		-webkit-transform: scale3d(0.5,0.5,1) rotate3d(0,0,1,-5deg);
+		transform: scale3d(0.5,0.5,1) rotate3d(0,0,1,-5deg);
+	}
+	100% {
+		width: 100vw;
+		height: 100vh;
+		opacity: 1;
+		-webkit-transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+		transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+	}
+}
+
+/* Alternate animation for showing the video wrapper */
+@-webkit-keyframes showVideo-2 {
+	50% {
+		width: 50vh;
+		height: 50vh;
+		opacity: 1;
+		-webkit-transform: scale3d(0.5,0.5,1) rotate3d(0,0,1,-5deg);
+		transform: scale3d(0.5,0.5,1) rotate3d(0,0,1,-5deg);
+	}
+	100% {
+		width: 100vw;
+		height: 100vh;
+		opacity: 1;
+		-webkit-transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+		transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+	}
+}
+
+@keyframes showVideo-2 {
+	50% {
+		width: 50vh;
+		height: 50vh;
+		opacity: 1;
+		-webkit-transform: scale3d(0.5,0.5,1) rotate3d(0,0,1,-5deg);
+		transform: scale3d(0.5,0.5,1) rotate3d(0,0,1,-5deg);
+	}
+	100% {
+		width: 100vw;
+		height: 100vh;
+		opacity: 1;
+		-webkit-transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+		transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+	}
+}
+
+/* Animation for hiding the video wrapper */
+@-webkit-keyframes hideVideo {
+	0% {
+		width: 100vw;
+		height: 100vh;
+		opacity: 1;
+		-webkit-transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+		transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+	}
+	100% {
+		width: 100vw;
+		height: 100vh;
+		opacity: 0;
+		-webkit-transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+		transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+	}
+}
+
+@keyframes hideVideo {
+	0% {
+		width: 100vw;
+		height: 100vh;
+		opacity: 1;
+		-webkit-transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+		transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+	}
+	100% {
+		width: 100vw;
+		height: 100vh;
+		opacity: 0;
+		-webkit-transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+		transform: scale3d(1,1,1) rotate3d(0,0,1,0deg);
+	}
+}
+
+/* Header */
+.codrops-header {
+	padding: 2em 1em 0;
+	text-align: center;
+}
+
+.codrops-header h1 {
+	font-size: 2.25em;
+	font-weight: normal;
+	line-height: 1;
+	margin: 0.5em 0 0;
+	letter-spacing: -1px;
+}
+
+.codrops-header h1 span {
+	font-size: 0.65em;
+	display: block;
+	padding: 0.5em 0 1em;
+}
+
+@media screen and (max-width: 40em) {
+	.codrops-header h1 {
+		font-size: 1.8em;
+	}
 }
